Added A bunch of classes

--- a/UML2Noa/PizzaLibrary.csproj
+++ b/UML2Noa/PizzaLibrary.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Data\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
