Playing around with Unittests

--- a/PizzaTest/PizzaTest.csproj
+++ b/PizzaTest/PizzaTest.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UML2Noa\PizzaLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
