--- a/UMLRazor/UMLRazor.csproj
+++ b/UMLRazor/UMLRazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,10 +8,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UML2Noa\PizzaLibrary.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\MenuItems\" />
   </ItemGroup>
 
 </Project>
